# Jhonson_Rag_Banckend

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: ingest.py  query.py  storage.py
app/crew/: agents.py  query_crew.py  tasks.py  tools.py
app/ingestion/: chunker.py  embedder.py  entity_extractor.py
app/reranker/: cross_encoder.py
app/retrieval/: bm25_search.py  graph_search.py  rrf_fusion.py  vector_search.py
app/utils/: latency.py
setup/: init.sql
