[project]
name = "graphrag"
version = "0.1.0"
description = "Production GraphRAG system with FalkorDB + pgvector + CrewAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "crewai[litellm]>=0.63.0",
    "crewai-tools>=0.12.0",
    "falkordb>=1.0.5",
    "psycopg[binary]>=3.1.19",
    "pgvector>=0.3.2",
    "sentence-transformers>=3.0.1",
    "rank-bm25>=0.2.2",
    "ollama>=0.2.1",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
